<resources>
    <string name="app_name">QuizGame</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="your_web_client_id">1043392332525-a0rd04tpju473ijlg40c9ibkenl6m4d8.apps.googleusercontent.com</string>
    <!--    <string name="my_web_client_id">1043392332525-a0rd04tpju473ijlg40c9ibkenl6m4d8.apps.googleusercontent.com</string>-->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="or">" OR"</string>
    <string name="sign_up"><u> Sign up</u></string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="sign_in">Sign In</string>
    <string name="continue_with_google">Continue with Google</string>
    <string name="don_t_you_have_an_account_yet">Don\'t you have an account yet?</string>
    <string name="i_forgot_my_password">I forgot my password</string>
    <string name="quizz_app_icon">Quizz app icon</string>

    <string name="forgot_password">
        <u>I forgot my password</u>.
    </string>
    <string name="app_icon1">app_icon1</string>
    <string name="quiz_game">QUIZ GAME</string>
</resources>