<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    android:background="@color/orange_red"
    tools:context=".view.SignInFragment">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_marginTop="32dp"
        android:background="@color/white"
        android:contentDescription="icon"
        android:src="@drawable/image_2" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="300dp"
        android:layout_gravity="center"
        android:layout_marginTop="40dp"
        android:layout_height="50dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txt_emailin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_email"
            android:textSize="12sp"
            android:hint="Email" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginTop="30dp"
        android:layout_gravity="center"
        app:passwordToggleEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txt_passwordin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_lock"
            android:drawablePadding="10dp"
            android:hint="Password" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btn_sign_in"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="24dp"
        android:backgroundTint="@color/white"
        android:layout_gravity="center"
        android:text="@string/sign_in"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passEditSignIn" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="25dp"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <View
            android:layout_width="190dp"
            android:layout_height="1dp"
            android:layout_gravity="center"
            android:background="@android:color/black" />

        <TextView
            android:layout_width="30sp"
            android:layout_height="20sp"
            android:layout_gravity="center"
            android:textColor="@color/black"
            android:text="@string/or" />

        <View
            android:layout_width="190dp"
            android:layout_height="1dp"
            android:layout_gravity="center"
            android:background="@android:color/black" />
    </LinearLayout>

    <ImageButton
        android:id="@+id/btn_continue_with_google"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:layout_gravity="center"
        android:src="@drawable/ic_goole"
        android:background="@color/orange_red"
        android:contentDescription="@string/continue_with_google" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="39dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/signUpText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="70dp"
            android:layout_marginTop="20dp"

            android:text="@string/don_t_you_have_an_account_yet"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/btn_sign_upin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/sign_up"
            android:textColor="@color/black"

            android:textSize="16sp"
            android:textStyle="bold" />
    </LinearLayout>

    <TextView
        android:id="@+id/tv_forgot_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forgot_password"
        android:layout_marginTop="20dp"
        android:textStyle="italic"
        android:layout_gravity="center"
        android:textColor="@color/black"/>




</LinearLayout>